--- a/search/requirements.txt
+++ b/search/requirements.txt
@@ -1,4 +1,7 @@
+streamlit>=1.26.0
+langchain>=0.0.217
 openai
-streamlit
-langchain
-duckduckgo-search
+duckduckgo-search==3.8.5
+anthropic>=0.3.0
+trubrics>=1.4.3
+streamlit-feedback
