--- a/auto-register/requirements.txt
+++ b/auto-register/requirements.txt
@@ -4,6 +4,7 @@ openai==1.6.1
 pandas==2.1.4
 requests==2.31.0
 streamlit==1.29.0
-supabase==2.3.0
+supabase
 trafilatura==1.6.3
+httpx==0.26.0
 lxml[html_clean]
